--- a/css/resume.changed.css
+++ b/css/resume.changed.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Saira+Extra+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
