--- a/css/resume.changed.css
+++ b/css/resume.changed.css
@@ -29,10 +29,12 @@
 }
 @media (max-width: 992px) {
   .imgcolumn {
+  display: none;
   width: 0em;
   padding: 0px;
   }
   .brandcolumn {
+    display: none;
     width: 0em;
     padding: 0px;
   }
