--- a/css/resume.css
+++ b/css/resume.css
@@ -77,10 +77,25 @@
   transition: .5s ease;
 }
 .container:hover .overlay {
-  opacity: 0.75;
+  opacity: 1;
+}
+.overlay-alt {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
 }
 .caption {
-  color: black;
+  /*color: black;*/
+  color: #f1f1f1;
   font-size: 20px;
   position: absolute;
   top: 90%;
@@ -89,7 +104,9 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-  background-color: lightgray;
+  /*background-color: lightgray;*/
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
 }
 
 body {
