--- a/css/resume.css
+++ b/css/resume.css
@@ -54,29 +54,98 @@
   display: table;
   /*padding: 5px;*/
 }
+.photorow {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
 
-.container {
-  position: relative;
-  width: 30%;
-  height: auto;
+/* Create four equal columns that sits next to each other */
+.photocolumn {
+  -ms-flex: 33%; /* IE10 */
+  flex: 33%;
+  max-width: 33%;
+  padding: 0 4px;
+}
+
+/*.photocolumn img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}*/
+
+.photocolumn .simplecontainer {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .photocolumn {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .photocolumn {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
 .photo {
-  display: inline-block;
-  max-width: 28%;
-  /*padding-top: 75%;*/
+  display: block;
+  width: 100%;
+  /*height: auto;*/
 }
-.overlay {
-/*  position: absolute;
+.simplecontainer {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+.simplecontainer .photo {
+    display: block;
+    width: 100%;  
+    /*object-fit: cover;*/
+}
+.simplecontainer .overlay {
+    width: 100%;
+    /*height: 100%;*/
+    /*object-fit: cover;*/
+}
+.overlay-old {
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   height: 100%;
-  width: 100%;*/
+  width: 100%;
   opacity: 0;
   transition: .5s ease;
 }
-.container:hover .overlay {
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  /*transform: translate(-5%, 0);*/
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 16px;
+  /*padding: 20px;*/
+  text-align: center;
+}
+.simplecontainer:hover .overlay {
   opacity: 1;
 }
 .caption {
@@ -94,21 +163,12 @@
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
 }
-
 body {
   font-family: 'Open Sans', serif;
   padding-top: 1em;
   color: #868e96;
   padding-left: 1em;
 }
-
-@media (min-width: 992px) {
-  body {
-    padding-top: 0em;
-    padding-left: 10rem;
-  }
-}
-
 h1,
 h2,
 h3,
@@ -120,39 +180,31 @@ h6 {
   text-transform: uppercase;
   color: #343a40;
 }
-
 h1 {
   font-size: 6rem;
   line-height: 5.5rem;
 }
-
 h2 {
   font-size: 3.5rem;
 }
-
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
   font-family: 'Saira Extra Condensed', serif;
   font-size: 1.35rem;
 }
-
 .list-social-icons a {
   color: #495057;
 }
-
 .list-social-icons a:hover {
   color: #BD5D38;
 }
-
 .list-social-icons a .fa-lg {
   font-size: 1.75rem;
 }
-
 .list-icons {
   font-size: 3rem;
 }
-
 .list-icons .list-inline-item i:hover {
   color: #BD5D38;
 }
@@ -162,8 +214,11 @@ h2 {
   text-align: left;
   /*text-transform: uppercase;*/
 }
-
 @media (min-width: 992px) {
+  body {
+    padding-top: 0em;
+    padding-left: 10rem;
+  }
   #sideNavSlim {
     text-align: left;
     position: fixed;
@@ -208,7 +263,6 @@ h2 {
   font-weight: 600;
   text-transform: uppercase;
 }
-
 @media (min-width: 992px) {
   #sideNav {
     text-align: center;
