--- a/css/resume.css
+++ b/css/resume.css
@@ -179,6 +179,7 @@ h6 {
   font-weight: 700;
   text-transform: uppercase;
   color: #343a40;
+  text-rendering: optimizeLegibility;
 }
 h1 {
   font-size: 6rem;
