--- a/css/resume.css
+++ b/css/resume.css
@@ -78,6 +78,16 @@
     padding: 0 4px;
 }
 
+.field {
+    width: 15%;
+    text-align: center;
+    font-family: 'Saira Extra Condensed', serif;
+    font-weight: 700;
+    /*text-transform: uppercase;*/
+    font-size: 2rem;
+    color: #343a40;
+    text-rendering: optimizeLegibility;
+}
 
 /* Create four equal columns that sits next to each other */
 
@@ -352,8 +362,8 @@ h2 {
 
 section.resume-section {
     border-bottom: 1px solid #dee2e6;
-    padding-top: 5rem !important;
-    padding-bottom: 5rem !important;
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important;
 }
 
 section.resume-section .resume-item .resume-date {
@@ -371,8 +381,8 @@ section.resume-section .resume-item .resume-date {
 
 @media (min-width: 990px) {
     section.resume-section {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
+        padding-top: 2rem !important;
+        padding-bottom: 2rem !important;
     }
 }
 
