[FEAT] change fonts to Saira

--- a/css/resume.css
+++ b/css/resume.css
@@ -391,6 +391,9 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
+    font-family: 'Saira', serif;
+    font-size: 1.1rem;
+
     color: #272727 !important;
 }
 
