--- a/css/resume.css
+++ b/css/resume.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+footer {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .bottom-some {
     margin-bottom: 2em;
 }
