--- a/css/resume.css
+++ b/css/resume.css
@@ -90,7 +90,7 @@ footer {
 }
 
 .field {
-    width: 15%;
+    width: 16%;
     text-align: center;
     font-family: 'Saira Extra Condensed', serif;
     font-weight: 700;
@@ -283,7 +283,7 @@ h2 {
 
 #sideNav .navbar-nav .nav-item .nav-link {
     font-weight: 600;
-    text-align: left;
+    /*text-align: left;*/
     /*text-transform: uppercase;*/
 }
 
