--- a/css/resume.css
+++ b/css/resume.css
@@ -522,6 +522,15 @@ th, td {
   background-color: #f2f2f2;
 }*/
 
+.field-table {
+    /*width: auto;*/
+    /*border: 1px solid #ddd;*/
+}
+
+.field-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
 span {
     display: inline-block;
 }
@@ -629,4 +638,11 @@ span {
   color: #414950;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
+}
+
+.field-title {
+    font-family: 'Ubuntu', serif;
+    text-transform:none;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
 }
