--- a/css/resume.css
+++ b/css/resume.css
@@ -108,6 +108,10 @@ footer {
         font-size: 1rem;
     }
 }
+.field  a:hover{
+    color: #BD5D38;
+    filter: hue-rotate(180deg);
+}
 
 /* Create four equal columns that sits next to each other */
 
