[FEAT] add loader

--- a/css/resume.css
+++ b/css/resume.css
@@ -1,4 +1,12 @@
-
+#loading {
+    background: url('../img/random/spinning_head.gif') center center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9999999;
+}
 
 * {
     box-sizing: border-box;
