[DBG] fix repeat gif issue

--- a/css/resume.css
+++ b/css/resume.css
@@ -1,5 +1,5 @@
 #loading {
-    background: url('../img/random/spinning_head.gif') center center;
+    background: url('../img/random/spinning_head.gif') no-repeat center center;
     position: absolute;
     top: 0;
     left: 0;
