--- a/css/resume.css
+++ b/css/resume.css
@@ -4,11 +4,11 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: 100%;
+    /*width: 100%;*/
     z-index: 9999999;  
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 * {
