--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,7 @@
     z-index: 9999999;  
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 60% 60%, cover;
+    background-size: 80%, cover;
 }
 
 * {
