--- a/css/resume.css
+++ b/css/resume.css
@@ -123,7 +123,7 @@ footer {
         font-size: 1rem;
     }
 }
-.field span:hover{
+.field:hover{
     color: #BD5D38;
     -webkit-filter: hue-rotate(130deg);
     filter: hue-rotate(130deg);
