--- a/css/resume.css
+++ b/css/resume.css
@@ -1,5 +1,5 @@
 #loading {
-    background: url('../img/random/spinning_head.gif'), url('../img/random/white.png');
+    background: url('https://www.baihan.nyc/img/random/spinning_head.gif'), url('https://www.baihan.nyc/img/random/white.png');
     position: absolute;
     top: 0;
     left: 0;
@@ -123,10 +123,16 @@ footer {
         font-size: 1rem;
     }
 }
+
+.handwritten {
+    font-family: 'Patrick Hand SC', cursive;
+}
+
+.field .field-img:hover,
 .field:hover{
     color: #BD5D38;
-    -webkit-filter: hue-rotate(130deg);
-    filter: hue-rotate(130deg);
+    -webkit-filter: hue-rotate(30deg);
+    filter: hue-rotate(30deg);
 }
 
 /* Create four equal columns that sits next to each other */
