--- a/css/resume.css
+++ b/css/resume.css
@@ -131,14 +131,15 @@ footer {
 
 .img-top {
     display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
     z-index: 99;
 }
 
 .field:hover .img-top {
     display: inline-block;
+}
+
+.field:hover .img-bottom {
+    display: none;
 }
 
 .field:hover {
