--- a/css/resume.css
+++ b/css/resume.css
@@ -122,6 +122,7 @@ footer {
 
 .handwritten {
     color: #BD5D38;
+    font-size: 20px;
     font-family: 'Patrick Hand SC', cursive;
 }
 
@@ -135,7 +136,7 @@ footer {
 }
 
 .field:hover .img-top {
-    display: inline;
+    display: block;
 }
 
 .field:hover .img-bottom {
