--- a/css/resume.css
+++ b/css/resume.css
@@ -122,25 +122,28 @@ footer {
 
 .handwritten {
     color: #BD5D38;
-    font-size: 20px;
+/*    font-size: 20px;
     font-family: 'Patrick Hand SC', cursive;
-}
+*/}
 
 .field-img{
     width: 80%;
 }
 
 .img-top {
-    display: none;
-    z-index: 99;
+    width: 0%;
+    /*display: none;*/
+    /*z-index: 99;*/
 }
 
 .field:hover .img-top {
-    display: block;
+    width: 80%;
+    /*display: inline-block;*/
 }
 
 .field:hover .img-bottom {
-    display: none;
+    width: 0%;
+    /*display: none;*/
 }
 
 .field:hover {
