--- a/css/resume.css
+++ b/css/resume.css
@@ -122,9 +122,9 @@ footer {
 
 .handwritten {
     color: #BD5D38;
-/*    font-size: 20px;
-    font-family: 'Patrick Hand SC', cursive;
-*/}
+    font-size: 20px; 
+    font-family: 'Rancho', cursive;
+}
 
 .field-img{
     width: 80%;
