--- a/css/resume.css
+++ b/css/resume.css
@@ -122,7 +122,7 @@ footer {
 
 .handwritten {
     color: #BD5D38;
-    font-size: 24px; 
+    font-size: 1.5rem; 
     font-family: 'Rancho', cursive;
 }
 
