--- a/css/supp.css
+++ b/css/supp.css
@@ -15,8 +15,9 @@
 }
 
 canvas {
-  width: 100%;
+  width: 50%;
   height: auto;
+  display: inline-block;
 }
 
 audio {
@@ -58,7 +59,7 @@ audio {
 }
 
 div#legend {
-  text-align: center;
+  text-align: left;
   vertical-align: middle;
 }
 
@@ -121,3 +122,74 @@ div#legend {
 /*img {
   max-width: 100%;
 }*/
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+}
+
+.button1:hover {
+  background-color: #555555;
+  color: white;
+}
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+}
+
+.button2:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
+.button3 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #f44336;
+}
+
+.button3:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+.button4 {
+  background-color: white;
+  color: black;
+  border: 2px solid #c1c1c1;
+}
+
+.button4:hover {
+  background-color: #c1c1c1;
+  color: white;
+}
+
+.button5 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button5:hover {
+  background-color: #4CAF50;
+  color: white;
+}
