--- a/css/supp.css
+++ b/css/supp.css
@@ -15,7 +15,7 @@
 }
 
 canvas {
-  width: 50%;
+  width: 30%;
   height: auto;
   display: inline-block;
 }
@@ -67,21 +67,21 @@ div#legend {
   content: 'Chroma bands:';
   margin-right: 10px;
   display: inline-block;
-  text-align: center;
+  text-align: left;
 }
 
 #showcase #chroma {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
 }
 
 #showcase .chroma-band {
   flex: 0 1 28px;
   height: 28px;
   display: inline-block;
-  text-align: center;
+  text-align: left;
   padding-top: 7px;
   font-size: 10px;
   color: #ffffff;
@@ -91,21 +91,21 @@ div#legend {
   content: 'MFCC bands:';
   margin-right: 10px;
   display: inline-block;
-  text-align: center;
+  text-align: left;
 }
 
 #showcase #mfcc {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
 }
 
 #showcase .mfcc-band {
   flex: 0 1 28px;
   height: 28px;
   display: inline-block;
-  text-align: center;
+  text-align: left;
   padding-top: 7px;
   font-size: 10px;
   color: #ffffff;
